[package]
name = "rtc-mem-bench-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
atomic-counter = "1.0.1"
futures = "0.3.28"
futures-util = "0.3.28"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "sync", "time"]}
tokio-tungstenite = "0.20.1"
url = "2.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
nanoid = "0.4.0"